prevent scrollbar on load (mobile)

--- a/src/Style/main.sass
+++ b/src/Style/main.sass
@@ -34,6 +34,7 @@ body
     gap: 2rem
     flex-direction: column
     justify-content: flex-end
+    overflow: hidden
 
 .status-bar
     display: flex
